<resources>
    <string name="app_name">LocApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="siguiente">Siguiente</string>
    <string name="usuario_a">Usuario A</string>
    <string name="usuario_b">Usuario B</string>
    <string name="appTitle">Detector de Proximidad</string>
    <string name="iconImage">TODO</string>
    <string name="zoomButtonText">Zoom</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chooserButton1">500mt</string>
    <string name="chooser2">1KM</string>
    <string name="chooser20">20mt</string>
    <string name="checkconn">CheckConn</string>
    <string name="loginButtonText">Login</string>
    <string name="registerButton">Registrarse</string>
    <string name="registrar_usuarioBoton">Registrar Usuario</string>
    <string name="usernameReg">Nombre de usuario</string>
    <string name="passwdReg">Contraseña</string>
    <string name="usernameLogin">Nombre de usuario</string>
    <string name="loginActivityButtonText">Iniciar Sesión</string>
    <string name="passwordLoginText">Contraseña</string>
    <string name="toRegisterButton">Registrarse</string>
    <string name="usuario_bButton">Usuario B</string>
    <string name="identificadorUsuarioB">Identificador</string>
    <string name="idLoginText">Id</string>
    <string name="desconectar_usuarios">Desconectar Usuarios</string>
    <string name="userRegisterTitle">Registro de usuarios</string>
    <string name="loginTitle">Inicio de sesión</string>
    <string name="deleteUser">Eliminar Usuario</string>
</resources>