<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">


    <EditText
        android:id="@+id/editTextNombreReg"
        android:layout_width="238dp"
        android:layout_height="58dp"
        android:layout_marginBottom="56dp"

        android:background="@color/gray"
        android:hint="@string/usernameReg"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/idUser"
        android:layout_width="238dp"
        android:layout_height="58dp"
        android:layout_marginBottom="56dp"
        android:background="@color/gray"
        android:hint="@string/identificadorUsuarioB"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextNombreReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPassReg"
        android:layout_width="238dp"
        android:layout_height="58dp"
        android:layout_marginBottom="100dp"
        android:background="@color/gray"
        android:hint="@string/passwdReg"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/registerUserButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/registerUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:text="@string/registrar_usuarioBoton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>