<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

    <Button
        android:id="@+id/zoomButton"
        android:layout_height="wrap_content"
        android:layout_width="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="5dp"
        android:drawableTint="@color/black"
        android:drawableEnd="@android:drawable/ic_menu_zoom"
        android:padding="8dp"
        android:textColor="@color/black"
        tools:targetApi="m" />

    <Button
        android:id="@+id/areaChooser500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:drawableTint="@color/black"
        android:padding="8dp"
        android:text="@string/chooserButton1"
        android:textColor="@color/black"
        tools:targetApi="m"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/areaChooser1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/areaChooser500"
        android:layout_marginStart="5dp"
        android:layout_marginTop="1dp"
        android:drawableTint="@color/black"
        android:padding="8dp"
        android:text="@string/chooser2"
        android:textColor="@color/black"
        tools:targetApi="m" />
    <Button
        android:id="@+id/areaChooser20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/areaChooser500"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:drawableTint="@color/black"
        android:padding="8dp"
        android:text="@string/chooser20"
        android:textColor="@color/black"
        tools:targetApi="m" />

</RelativeLayout>